# ts-trades

./: .gitignore  CLAUDE.md  ClaudeDesktop.md  README.md  TradeStationOpenAPISpec.json  ide_helper.py  openapi (1).json:Zone.Identifier  pyrightconfig.json  ts_state.json
secret/: credentials.json  ts_state.json
tsAPI/: LICENSE  README.md  pyproject.toml
tsAPI/src/: auth.py  logger.py
tsAPI/src/client/: base.py  baseStream.py
tsAPI/src/tsapi/: __init__.py
tsAPI/src/tsapi/http/: __init__.py  base.py
tsAPI/src_temp/: __init__.py  auth.py  logger.py
tsClient/: README.md  pip.bat  pyproject.toml
tsClient/src/: __init__.py  config.py  main.py  test_imports.py
tsClient/src/secret/: credentials.json  credentials_paula.json  ts_state.json
