[tool.poetry]
name = "tsapi"
version = "0.2.0"
description = "An unofficial wrapper for the TradeStation API."
readme = "README.md"
packages = [{ include = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
httpx = "^0.27.0"
typing-extensions = ">=4.0.0"

# Development dependencies remain the same