[tool.poetry]
name = "tsapi"
version = "0.2.0"
description = "An unofficial wrapper for the TradeStation API."
readme = "README.md"
license = "MIT"
packages = [{include = "tsapi", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
httpx = "^0.27.0"
typing-extensions = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
