[tool.poetry]
name = "tsclient"
version = "0.1.0"
description = "TradeStation API client implementation"
authors = ["Steve"]
readme = "README.md"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# For now, we'll handle tsAPI imports via sys.path manipulation
# Once we restructure tsAPI properly, we can add it as a dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"